--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="style/ion.rangeSlider.min.css">
+    <link rel="stylesheet" href="style/jquery.formstyler.css">
+    <link rel="stylesheet" href="style/jquery.formstyler.theme.css">
+    <link rel="stylesheet" href="style/jquery.rateyo.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
@@ -117,7 +121,7 @@
         </div>
     </div>
 
-    <section class="catalog">
+        <section class="catalog">
         <div class="container">
             <h2 class="catalog__title">
                 Гидроциклы
@@ -130,7 +134,7 @@
                     <button>еще</button>
                 </div>
                 <div class="catalog__filter-btn">
-                    <select>
+                    <select class="filter-style">
                         <option value=""></option>
                         <option value=""></option>
                         <option value=""></option>
@@ -168,6 +172,64 @@
                         <div class="tabs-container">
                             <div class="tabs-content aside-filter__tabs-content tabs-content--active">
                                 
+                                <form class="aside-filter__form">
+                                    <ul class="aside-filter__list">
+                                        <li class="aside-filter__item-drop">
+                                            <p class="aside-filter__item-title filter__item-drop filter__item-drop--active">Наличие</p>
+                                            <div class="aside-filter__content">
+                                                <div class="aside-filter__content-box">
+                                                    <label for="">
+                                                        <input class="filter-style" type="checkbox">
+                                                        В наличие
+                                                    </label class="aside-filter__content-label">
+                                                </div>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
+                                                <div class="aside-filter__content-box">
+                                                    <label for="">
+                                                        <input class="filter-style" type="checkbox">
+                                                        Под заказ
+                                                    </label class="aside-filter__content-label">
+                                                </div>
+                                            </div> 
+                                        </li>
+                                        <li class="aside-filter__item-drop">
+                                            <p class="aside-filter__item-title filter__item-drop filter__item-drop--active">Новинки</p>
+                                            <div class="aside-filter__content aside-filter__content-radio">
+                                                <div class="aside-filter__content-box">
+                                                    <label for="">
+                                                        <input class="filter-style" name="radio" type="radio">
+                                                        Все
+                                                    </label class="aside-filter__content-label">
+                                                </div>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
+                                                <div class="aside-filter__content-box">
+                                                    <label for="">
+                                                        <input class="filter-style" name="radio" type="radio">
+                                                        Новинки
+                                                    </label class="aside-filter__content-label">
+                                                </div>
+                                                <div class="aside-filter__content-box">
+                                                    <label for="">
+                                                        <input class="filter-style" name="radio" type="radio">
+                                                        Акции
+                                                    </label class="aside-filter__content-label">
+                                                </div>
+                                            </div> 
+                                        </li>
+                                        <li class="aside-filter__item-drop">
+                                            <p class="aside-filter__item-title filter__item-drop filter__item-drop--active">Цена</p>
+                                            <div class="aside-filter__content">
+                                                <input type="text" class="js-range-slider" name="my_range"
+                                                value="" data-min="100000" data-max="500000" data-from="200" data-to="500" data-grid="true" />
+                                            </div> 
+                                        </li>
+
+
+
+
+
+                                        <li class="aside-filter__item-list"></li>
+                                    </ul>
+                                </form>
+
                             </div>
                             <div class="tabs-content aside-filter__tabs-content">content-2</div>
                         </div>
